Remove old pages, change header

--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -1,6 +1,10 @@
 {
   "siteDescription": "Holo Apollo description",
-  "search": "Search...",
-  "allGoods": "All goods",
-  "application": "Application"
+  "workroom": "Workroom of printing and design",
+  "printing": "Printing",
+  "design": "Design",
+  "materials": "Materials",
+  "prices": "Prices",
+  "contacts": "Contacts",
+  "order": "Order"
 }
