--- a/static/locales/en/home.json
+++ b/static/locales/en/home.json
@@ -1,3 +1,5 @@
 {
-  "welcome": "Welcome to Holo Apollo!"
+  "welcome": "Welcome to Holo Apollo!",
+  "adviceFormHeaderText1":  "Got questions?",
+  "adviceFormHeaderText2":  "Yes, I do"
 }
