--- a/static/locales/uk/home.json
+++ b/static/locales/uk/home.json
@@ -1,3 +1,5 @@
 {
-  "welcome": "Ласкаво просимо до Holo Apollo!"
+  "welcome": "Ласкаво просимо до Holo Apollo!",
+  "adviceFormHeaderText1":  "Є питання?",
+  "adviceFormHeaderText2":  "Так, хочу"
 }
