--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -6,5 +6,6 @@
   "materials": "Materials",
   "prices": "Prices",
   "contacts": "Contacts",
-  "order": "Order"
+  "order": "Order",
+  "copyright": "All rights reserved"
 }
