--- a/static/locales/ru/common.json
+++ b/static/locales/ru/common.json
@@ -6,5 +6,6 @@
   "materials": "Материалы",
   "prices": "Прайс",
   "contacts": "Контакты",
-  "order": "Заказать"
+  "order": "Заказать",
+  "copyright": "Все права защищены"
 }
