--- a/static/locales/uk/common.json
+++ b/static/locales/uk/common.json
@@ -6,5 +6,6 @@
   "materials": "Матеріали",
   "prices": "Прайс",
   "contacts": "Контакти",
-  "order": "Замовити"
+  "order": "Замовити",
+  "copyright": "Всі права захищені"
 }
