--- a/static/locales/en/home.json
+++ b/static/locales/en/home.json
@@ -16,5 +16,7 @@
   "infographics": "Infographics",
   "instagramDesign": "Instagram design",
   "printingDesign": "Design for printing",
-  "techLayouts": "Technical layouts"
+  "techLayouts": "Technical layouts",
+  "whatIsSilkScreen": "What is silk screen printing?",
+  "technologyDescription": "Screen printing technology is a method of directly transferring ink to paper or fabric through a screen form.<br/><br/>This method allows ink to be applied to paper of any density and color. That is, even to black super-dense cardboard. None of the existing printing methods can achieve this result. Products printed by screen printing are visually different from conventional printing. The paint has a texture, you can add glitter to it, or varnish it.<br/><br/>Silk screen printing is an ancient technology that was used in China and Japan back in the 5th century.<br/>Silk threads in the form of a net were pulled onto a dense wooden frame. Using starch and natural dyes, a pattern was transferred through this sieve onto paper and fabric.<br/><br/>Now thin synthetic threads are used instead of silk. Instead of starch, special light-sensitive photo emulsions are used.<br/><br/>Only one color can be printed at a time. A separate frame is used to print each color."
 }
