--- a/static/locales/uk/home.json
+++ b/static/locales/uk/home.json
@@ -16,5 +16,7 @@
   "infographics": "Інфографіка",
   "instagramDesign": "Instagram дизайн",
   "printingDesign": "Дизайн для друку",
-  "techLayouts": "Технічні макети"
+  "techLayouts": "Технічні макети",
+  "whatIsSilkScreen": "Що таке шовкотрафарет?",
+  "technologyDescription": "Технологія шовкотрафарету - метод прямого перенесення фарби на папір або тканину через трафаретну форму.<br/><br/>Цей метод дозволяє наносити фарбу на папір будь-якої щільності і кольору. Тобто навіть на чорний супер-щільний картон. Жоден з існуючих методів друку не зможе досягти такого результату. Вироби, надруковані методом шовкотрафарету дуже відрізняються візуально від звичайної друку. Фарба має текстуру, в неї можна додавати блискітки, або лакувати її.<br/><br/>Шовкографія - це стародавня технологія, яку використовували в Китаї і Японії ще в V столітті.<br/>На щільну дерев'яну рамку натягалися шовкові нитки у вигляді сітки, за допомогою крохмалю і натуральних барвників через це сито на папір і тканину переносився малюнок.<br/><br/>Зараз замість шовку використовуються тонкі синтетичні нитки. Замість крохмалю - спеціальні світло-чутливі фото-емульсії.<br/><br/>Одночасно можно надрукувати лише один колір. Для друку кожного кольру використовується окрема рама."
 }
