--- a/static/locales/ru/home.json
+++ b/static/locales/ru/home.json
@@ -18,5 +18,16 @@
   "printingDesign": "Дизайн для печати",
   "techLayouts": "Технические макеты",
   "whatIsSilkScreen": "Что такое шелкотрафарет?",
-  "technologyDescription": "Технология шелкотрафарета - метод прямого перенесения краски на бумагу или ткань сквозь трафаретную форму.<br/><br/>Этот метод позволяет наносить краску на бумагу любой плотности и цвета. То есть даже на чёрный супер-плотный картон. Ни один из существующих методов печати не сможет достичь такого результата. Изделия, напечатанные методом шелкотрафарета, очень отличаются визуально от обычной печати. Краска имеет текстуру, в неё можно добавлять блестинки, или лакировать её.<br/><br/>Шелкография - это древняя технология, которую использовали в Китае і Японии ещё в V веке.<br/>На плотную деревянную рамку натягивались шелковые нитки в виде сетки, с помощью крахмала и натуральных красителей сквозь это сито на бумагу и ткань переносился рисунок.<br/><br/>Сейчас вместо шелка используются тонкие синтетические нитки. Вместо крахмала - специальные светочувствительные фото-эмульсии.<br/><br/>Одновременно можно напечатать только один цвет. Для печати каждого цвета используется отдельная рама."
+  "technologyDescription": "Технология шелкотрафарета - метод прямого перенесения краски на бумагу или ткань сквозь трафаретную форму.<br/><br/>Этот метод позволяет наносить краску на бумагу любой плотности и цвета. То есть даже на чёрный супер-плотный картон. Ни один из существующих методов печати не сможет достичь такого результата. Изделия, напечатанные методом шелкотрафарета, очень отличаются визуально от обычной печати. Краска имеет текстуру, в неё можно добавлять блестинки, или лакировать её.<br/><br/>Шелкография - это древняя технология, которую использовали в Китае і Японии ещё в V веке.<br/>На плотную деревянную рамку натягивались шелковые нитки в виде сетки, с помощью крахмала и натуральных красителей сквозь это сито на бумагу и ткань переносился рисунок.<br/><br/>Сейчас вместо шелка используются тонкие синтетические нитки. Вместо крахмала - специальные светочувствительные фото-эмульсии.<br/><br/>Одновременно можно напечатать только один цвет. Для печати каждого цвета используется отдельная рама.",
+  "digitalPrinting": "Цифровая печать",
+  "screenPrinting": "Шелкотрафарет",
+  "zoomedIn": "под увеличением",
+  "printingOnDarkPaper": "Печать на темной бумаге",
+  "inkTexture": "Текстура краски",
+  "sparkles": "Возможность добавить блестинки",
+  "denseCardboard": "Печать на очень плотном картоне",
+  "largeCirculation": "Большие тиражи",
+  "fullColor": "Полноцветная печать",
+  "yes": "Да",
+  "no": "Нет"
 }
