--- a/static/locales/en/home.json
+++ b/static/locales/en/home.json
@@ -30,5 +30,8 @@
   "largeCirculation": "Large circulation",
   "fullColor": "Full-color printing",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+  "workroomGoal": "The goal of our workroom is to create printing products that are pleasant to touch and see. To achieve this, we use all our skills and ingenuity :)<br/> <br/>In our workroom you can order stylish design of your products and print them using screen printing.",
+  "wantCoolDesign": "Want cool design and printing?",
+  "leaveApplication": "Leave a request and get a free advice"
 }
