--- a/static/locales/ru/home.json
+++ b/static/locales/ru/home.json
@@ -30,5 +30,8 @@
   "largeCirculation": "Большие тиражи",
   "fullColor": "Полноцветная печать",
   "yes": "Да",
-  "no": "Нет"
+  "no": "Нет",
+  "workroomGoal": "Цель нашей мастерской - создавать полиграфию, которую приятно трогать и рассматривать. Для этого мы используем всё своё мастерство и смекалку :)<br/><br/>В нашей мастерской вы можете заказать стильный дизайн своих изделий и их печать методом шелкотрафарета.",
+  "wantCoolDesign": "Хочешь крутой дизайн и печать?",
+  "leaveApplication": "Оставляй заявку и получи бесплатную консультацию"
 }
