--- a/static/locales/uk/home.json
+++ b/static/locales/uk/home.json
@@ -30,5 +30,8 @@
   "largeCirculation": "Великі тиражі",
   "fullColor": "Повноколірний друк",
   "yes": "Так",
-  "no": "Ні"
+  "no": "Ні",
+  "workroomGoal": "Мета нашої майстерні - створювати поліграфію, якої приємно торкатися і розглядати її. Для цього ми використовуємо усю свою майстерність і кмітливість :)<br/><br/>У нашій майстерні ви можете замовити стильний дизайн ваших виробів і їх друк методом шовкотрафарету.",
+  "wantCoolDesign": "Хочеш крутий дизайн та друк?",
+  "leaveApplication": "Залишай заявку і отримуй безкоштовну консультацію"
 }
