--- a/static/locales/en/home.json
+++ b/static/locales/en/home.json
@@ -33,5 +33,13 @@
   "no": "No",
   "workroomGoal": "The goal of our workroom is to create printing products that are pleasant to touch and see. To achieve this, we use all our skills and ingenuity :)<br/> <br/>In our workroom you can order stylish design of your products and print them using screen printing.",
   "wantCoolDesign": "Want cool design and printing?",
-  "leaveApplication": "Leave a request and get a free advice"
+  "leaveApplication": "Leave a request and get a free advice",
+  "effects": "You can also add some special effects to your print product for a better tactile experience",
+  "ourWork": "Our work",
+  "volume": "Volume",
+  "volumeDescription": "Additional volume can be achieved by stamping. There are two main types of stamping - blind stamping and embossing. They differ in the method of making cliches and in the appearance of the result. Blind stamping adds a depressed print. Embossing adds 3D volume.",
+  "gloss": "Gloss",
+  "glossDescription": "Shiny edges of business cards, accents, or gloss and embossing at the same time. Using thermal transfer foil, you can achieve a cool gloss, more voluminous printing and visual appeal of products.",
+  "chic": "Chic",
+  "chicDescription": "Visual and tactile advantage over competitors is what we offer you. Personal design, silk screen printing, embossing, lamination and foiling are the main areas of our workroom."
 }
