--- a/static/locales/ru/home.json
+++ b/static/locales/ru/home.json
@@ -33,5 +33,13 @@
   "no": "Нет",
   "workroomGoal": "Цель нашей мастерской - создавать полиграфию, которую приятно трогать и рассматривать. Для этого мы используем всё своё мастерство и смекалку :)<br/><br/>В нашей мастерской вы можете заказать стильный дизайн своих изделий и их печать методом шелкотрафарета.",
   "wantCoolDesign": "Хочешь крутой дизайн и печать?",
-  "leaveApplication": "Оставляй заявку и получи бесплатную консультацию"
+  "leaveApplication": "Оставляй заявку и получи бесплатную консультацию",
+  "effects": "Также к вашему печатному изделию для лучшего тактильного опыта можно добавить некоторые спецэффекты",
+  "ourWork": "Наши работы",
+  "volume": "Объём",
+  "volumeDescription": "Дополнительного объёма можно достичь с помощью тиснения. Существует два основных вида тиснения - блинтовое и конгревное. Они отличаются методом изготовления клише и внешним видом результата. Блинтовое тиснение добавляет вдавленный принт. Конгревное - 3D объём.",
+  "gloss": "Блеск",
+  "glossDescription": "Блестящие торцы визиток, акценты, или блеск и тиснение одновременно. С помощью термотрасфертной фольги можно достичь крутого блеска, более объемной печати и визуальной привлекательности изделий.",
+  "chic": "Шик",
+  "chicDescription": "Визуальное и тактильное преимущество над конкурентами - вот что мы вам предлагаем. Персональный дизайн, шелкотрафаретная печать, тиснение, ламинация и фольгирование - основные направления нашей мастерской."
 }
