--- a/static/locales/uk/home.json
+++ b/static/locales/uk/home.json
@@ -33,5 +33,13 @@
   "no": "Ні",
   "workroomGoal": "Мета нашої майстерні - створювати поліграфію, якої приємно торкатися і розглядати її. Для цього ми використовуємо усю свою майстерність і кмітливість :)<br/><br/>У нашій майстерні ви можете замовити стильний дизайн ваших виробів і їх друк методом шовкотрафарету.",
   "wantCoolDesign": "Хочеш крутий дизайн та друк?",
-  "leaveApplication": "Залишай заявку і отримуй безкоштовну консультацію"
+  "leaveApplication": "Залишай заявку і отримуй безкоштовну консультацію",
+  "effects": "Також до вашого друкованого виробу для кращого тактильного відчуття можна додати деякі спецефекти",
+  "ourWork": "Наші роботи",
+  "volume": "Об'єм",
+  "volumeDescription": "Додаткового об'єму можна досягти за допомогою тиснення. Є два основних види тиснення - блінтове і конгревне. Вони відрізняються методом виготовлення кліше і зовнішнім виглядом результату. Блінтове тиснення додає втиснутий принт. Конгревне - 3D об'єм.",
+  "gloss": "Блиск",
+  "glossDescription": "Блискучі торці візиток, акценти, або і блиск і тиснення відразу. За допомогою термотрасфертної фольги можна досягти крутого сяйва, більш об'ємного друку і візуальної привабливості виробів.",
+  "chic": "Шик",
+  "chicDescription": "Візуальна і тактильна перевага над конкурентами - ось що ми вам пропонуємо. Персональний дизайн, шовкотрафаретний друк, тиснення, ламінація та фольгування - основні напрями нашої майстерні."
 }
